--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ a:hover {
   /* For a screen < 540px, this CSS will be read */
   .container {
     width: 300px;
-    margin-top: 30%;
+    margin: 30% auto;
   }
 
 }
